crates/viewer_support/re_dataframe_ui/tests/snapshots/filter_tests__int_all_types@UInt16Type.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: Int(
        IntFilter {
            operator: Eq,
            rhs_value: Some(
                3,
            ),
        },
    ),
    field: Field {
        name: "column",
        data_type: UInt16,
    },
    unfiltered: PrimitiveArray<UInt16>
    [
      1,
      2,
      3,
      4,
      5,
    ],
    filtered: PrimitiveArray<UInt16>
    [
      3,
    ],
}
